# stwnsh-rs

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE.md  PKGBUILD  README.md
.github/workflows/: build.yml
src/: main.rs
