[package]
name = "stwnsh-rs"
version = "2022.9.25"
edition = "2021"
authors = ["Tim Janke <tim+github@janke.biz>"]
description = "A small and easy to use tool for hashing passwords with different hash functions."
repository = "https://github.com/flying7eleven/stwnsh-rs"
readme = "README.md"
license-file = "LICENSE.md"
rust-version = "1.63"

[dependencies.clap]
version = "4.0.0-rc.2"
default-features = false
features = ["std", "derive"]
